[project]
name = "twisted-mqtt"
dynamic = ["version"]
description = "twisted-mqtt is a library using the Twisted framework and implementing the MQTT protocol (v3.1 & v3.1.1)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rafael González", email = "rafael08@ucm.es"},
    {name = "Jaime Zamorano", email = "jzamorano@fis.ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    'Framework :: Twisted', 
    'Topic :: Communications',
    'Topic :: Internet',
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  'twisted',
]


[project.urls]
Homepage = "https://github.com/astrorafael/twisted-mqtt"
Repository = "https://github.com/astrorafael/twisted-mqtt.git"

[build-system]
requires = ["setuptools >= 45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# pyproject.toml
# Automatically generates a _version-py file from with Git information
# This file shold be placed in .gitignore
[tool.setuptools_scm]
write_to = "src/mqtt/_version.py"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "rust-just>=1.36.0",
    "twine>=5.1.1",
]
